@@ -1,0 +1,7 @@
+<?php
+
+  class mod_setup extends achievoModule
+  {
+  }
+  
+?>
