@@ -5,6 +5,8 @@ Bug numbers are references to bugs in http://www.achievo.org/bugzilla
 
 Changes in Achievo 0.9.2
 ------------------------
++ Added setup.php, which can be used to install and/or upgrade the Achievo
+  database.
 + Added a cron script that sends reminders for todo's.
 + The search box in the top frame now works.
 + Added PIM API. All modules can now add information to the PIM screen.
